--- a/main.html
+++ b/main.html
@@ -8,31 +8,26 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	  <title>Pseudo-Elements Example</title>
+	 <title>Pseudo-Elements Corrected</title>
   <style>
-    /* Styling the container */
     #container {
       margin: 20px;
       padding: 10px;
-      border: 1px solid #000; /* optional to visualize the container */
+      border: 1px solid #000;
     }
-
-    /* Insert content before the container content */
     #container::before {
-      content: "Before Text - ";
+      content: "Before Element";
       color: #f00;
       font-size: 20px;
     }
-
-    /* Insert content after the container content */
     #container::after {
-      content: " - After Text";
+      content: "After Element";
       color: #f00;
       font-size: 20px;
     }
   </style>
   <div id="container">
-    This is the main content of the container.
+    This is the main container element
   </div>
     <script type="text/javascript" src="./script.js">
 </script>
